Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10971

Data cache metrics count error when LIRS is enabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Impala 4.0.0
    • Impala 4.3.0
    • Backend
    • None

    Description

      When LIRS is enabled, impala-server.io-mgr.remote-data-cache-total-bytes may give a wrong value because of INSTANT EVICTIONS. When INSTANT EVICTIONS occur, the total bytes decreases due to EvictedEntry, and no corresponding increase due to failure of insert, so the total bytes becomes smaller and smaller, or even negative.

      Attachments

        Activity

          People

            joemcdonnell Joe McDonnell
            Eyizoha Ye Zihao
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: